Fix #21745: Back button and navbar menu button overlap on small mobile screens. (#21850)
* Fix navbar back button overlapping on small screens

* Fix failing test

* Fix Lint check

* Fix failing lint check

* Update top-navigation-bar.component.ts

* Update top-navigation-bar.component.ts

* updated shouldHideBackButton

* Update top-navigation-bar.component.html

* Update top-navigation-bar.component.ts

* use prettier

* update logic

* use prettier

* use preetier

* updated to use Location

* Fix Failing tests

* Fix Failing tests

* Fix Failing test

* resolve merge conflict

* Update top-navigation-bar.component.ts

* Update top-navigation-bar.component.ts

* Updated the code

* Fix Failing test

* Updated logic

* Additional changes for Fix-BlogPage-back-button

* Update top-navigation-bar.component.ts

* updated the name

* fix lint

* Fix lint check

* Fix failing test

* Updated the function

* Added test cases

* Change the name of test case

* change test name

---------

Co-authored-by: Himkar <himkarsingh00@gmail.com>

--- a/core/templates/components/common-layout-directives/navigation-bars/top-navigation-bar.component.html
+++ b/core/templates/components/common-layout-directives/navigation-bars/top-navigation-bar.component.html
@@ -1,5 +1,5 @@
 <div class="navbar-header e2e-test-navbar-header oppia-top-navigation-bar">
-  <a *ngIf="windowIsNarrow && !pageIsIframed"
+  <a *ngIf="windowIsNarrow && !pageIsIframed && menuIconIsShown"
      (click)="toggleSidebar($event)"
      class="navbar-brand oppia-navbar-menu oppia-transition-200 e2e-mobile-test-navbar-button ml-0"
      tabindex="0">
@@ -38,7 +38,7 @@
           <img [src]="getStaticImageUrl('/logo/288x128_logo_white.png')"
                class="oppia-logo"
                alt="Oppia Home"
-               [ngStyle]="!windowIsNarrow && {'width': '90px'}">
+               [ngStyle]="{'width': !windowIsNarrow ? '90px' : '','margin-left': !menuIconIsShown ? '25px' : '0px'}">
         </picture>
       </a>
     </ng-template>
