Fix part of #21646: Added CUJ 4.1 - See statistics and previous explorations on the creator dashboard (#22042)
* Fix part of #21646: Added CUJ 4.1

* Resolve comments and fixed test-duration

* fix: removed flag from save exploration function

--- a/core/templates/pages/creator-dashboard-page/creator-dashboard-page.component.html
+++ b/core/templates/pages/creator-dashboard-page/creator-dashboard-page.component.html
@@ -23,7 +23,7 @@
             [hidden]="dashboardStats.numRatings || relativeChangeInTotalPlays">
             {{ dashboardStats.averageRatings || 'N/A' }}
         </h2>
-        <div [hidden]="!dashboardStats.numRatings">
+        <div class="e2e-test-oppia-total-users" [hidden]="!dashboardStats.numRatings">
           <p *ngIf="dashboardStats.numRatings === 1">
             (by {{ dashboardStats.numRatings }} user)
           </p>
