Fixes part of #21646: Add CUJ 1.16 View and search for blog posts (#22105)
* added cuj view and search for blog posts

* fix failing checks

* fix acceptance test

* fix tests

* fix tests

* minor correction

* add changes

* fix lint errors

* store all html constants

--- a/core/templates/pages/blog-home-page/blog-home-page.component.html
+++ b/core/templates/pages/blog-home-page/blog-home-page.component.html
@@ -84,7 +84,7 @@
                   [srcset]="getStaticCopyrightedImageUrl('/general/no_explorations_found.png')">
           <img [src]="getStaticCopyrightedImageUrl('/general/no_explorations_found.png')">
         </picture>
-        <p class="text-center no-result-found">
+        <p class="text-center no-result-found e2e-no-blog-posts-found">
           {{ 'I18N_BLOG_HOME_PAGE_NO_RESULTS_FOUND' | translate }}
         </p>
       </div>
@@ -134,7 +134,7 @@
           [(selectedTags)]="selectedTags" [smallScreenViewIsActive]="isSmallScreenViewActive()"
           >
           </oppia-tag-filter>
-          <button class="btn primary-button" (click)="onSearchQueryChangeExec()">
+          <button class="e2e-test-search-submit-btn btn primary-button" (click)="onSearchQueryChangeExec()">
             <span>Search</span>
           </button>
         </div>
