--- a/core/templates/pages/blog-dashboard-page/blog-card/blog-card.component.html
+++ b/core/templates/pages/blog-dashboard-page/blog-card/blog-card.component.html
@@ -15,7 +15,7 @@
       </p>
     </picture>
   </div>
-  <div class="blog-card-content" [ngClass]="{'mx-1 my-1': shownOnblogPostPage}">
+  <div class="blog-card-content e2e-test-blog-post-content" [ngClass]="{'mx-1 my-1': shownOnblogPostPage}">
     <mat-card-title class="blog-card-title e2e-test-blog-post-tile-title">
       {{ blogPostSummary.title }}
     </mat-card-title>
@@ -40,9 +40,9 @@
                                 class="d-block">
       </oppia-rte-output-display>
     </mat-card-content>
-    <mat-card-footer class="d-flex blog-card-tag-container flex-wrap pt-2">
+    <mat-card-footer class="d-flex blog-card-tag-container e2e-test-blog-tag-container flex-wrap pt-2">
       <div *ngFor="let tag of blogPostSummary.tags"
-           class="blog-card-tag px-1 py-1 mx-1 my-1">
+           class="e2e-test-blog-post-tag blog-card-tag px-1 py-1 mx-1 my-1">
         <span>{{ tag }}</span>
       </div>
     </mat-card-footer>
