Fix part of #22082: Migrate ng-if to *ng-if (#22118)
* Removed instances of ng-if

* Removed instances of ng-hide

* Removed instances of ng-show

* Removed instances of ng-click

* Removed instances of

* Removed instances of

* Removed instances of

* Removed instances of ng-model

* Removed instances of unit-test-utils.ajs.ts

* lint fix

* lint fix

* fix frontend tests

--- a/core/templates/pages/exploration-player-page/layout-directives/progress-nav.component.html
+++ b/core/templates/pages/exploration-player-page/layout-directives/progress-nav.component.html
@@ -2,7 +2,7 @@
   <!-- Wrapping div on first button keeps the second button right-aligned
     even when the first button is not present. -->
   <div class="row-item row-item-previous-card">
-    <!-- ng-if on this second wrapping div because ng-if lags on buttons. -->
+    <!-- *ngIf on this second wrapping div because *ngIf lags on buttons. -->
     <div *ngIf="hasPrevious && !helpCardHasContinueButton && navigationThroughCardHistoryIsEnabled">
       <button mat-raised-button
               aria-label="Previous Card"
