--- a/extensions/interactions/CodeRepl/directives/code-repl-interaction.component.html
+++ b/extensions/interactions/CodeRepl/directives/code-repl-interaction.component.html
@@ -1,6 +1,6 @@
 <div class="code-repl-container">
   <div>
-    <!-- This ng-form is needed for submitting answer on hitting enter. -->
+    <!-- This form is needed for submitting answer on hitting enter. -->
     <form (ngSubmit)="runAndSubmitCode(code)">
       <div class="code-repl-input-box">
         <ngx-codemirror [options]="editorOptions"
