--- a/extensions/interactions/FractionInput/directives/fraction-input-interaction.component.html
+++ b/extensions/interactions/FractionInput/directives/fraction-input-interaction.component.html
@@ -1,5 +1,5 @@
 <form autocomplete="off" [attr.disabled]="!isValid ? true : null" role="form" class="form-horizontal fraction-input-interaction">
-  <!-- This ng-form is needed for submitting answer on hitting enter. -->
+  <!-- This form is needed for submitting the answer on hitting enter. -->
   <input type="text"
          name="answer"
          [(ngModel)]="answer"
