--- a/extensions/interactions/NumberWithUnits/directives/number-with-units-interaction.component.html
+++ b/extensions/interactions/NumberWithUnits/directives/number-with-units-interaction.component.html
@@ -1,5 +1,5 @@
 <form autocomplete="off" [attr.disabled]="!isValid" role="form" class="form-horizontal" (submit)="submitAnswer()">
-  <!-- This ng-form is needed for submitting answer on hitting enter. -->
+  <!-- This form is needed for submitting the answer on hitting enter. -->
   <input type="text"
          name="answer"
          aria-label="Your answer"
