--- a/core/templates/pages/exploration-editor-page/editor-navigation/editor-navbar-breadcrumb.component.html
+++ b/core/templates/pages/exploration-editor-page/editor-navigation/editor-navbar-breadcrumb.component.html
@@ -1,17 +1,17 @@
 <ul class="nav navbar-nav d-none d-md-block oppia-navbar-breadcrumb ng-cloak">
   <li>
     <span class="oppia-navbar-breadcrumb-separator"></span>
-    <span ng-if="navbarTitle">
+    <span *ngIf="navbarTitle">
       <[navbarTitle]>
       <span class="oppia-navbar-breadcrumb-separator oppia-navbar-breadcrumb-separator-icon"></span>
       <span>
         <[getCurrentTabName()]>
       </span>
     </span>
-    <span ng-if="navbarTitle === ''" ng-click="editTitle()" class="oppia-untitled-exploration-text">
+    <span *ngIf="navbarTitle === ''" (click)="editTitle()" class="oppia-untitled-exploration-text">
       Untitled Exploration
     </span>
-    <span class="e2e-test-loading-message" ng-if="navbarTitle === null">
+    <span class="e2e-test-loading-message" *ngIf="navbarTitle === null">
       Loading...
     </span>
   </li>
