--- a/core/templates/tests/form_entry_point_modal_directive.html
+++ b/core/templates/tests/form_entry_point_modal_directive.html
@@ -1,9 +1,13 @@
-<ng-form name="schemaForm">
-  <schema-based-editor ng-model="localValue" ng-model-change="$applyAsync()" [schema]="definition" [disabled]="isDisabled()">
+<form #schemaForm="ngForm">
+  <schema-based-editor [(ngModel)]="localValue" [schema]="definition" [disabled]="isDisabled()" name="schemaEditor">
   </schema-based-editor>
-</ng-form>
+</form>
 
-<div ng-if="!isDisabled()">
-  <button ng-click="submitValue(localValue)" class="btn btn-success" ng-disabled="schemaForm.$invalid">Submit</button>
-  <button ng-click="cancelEdit()" class="btn btn-secondary">Cancel</button>
+<div *ngIf="!isDisabled()">
+  <button (click)="submitValue(localValue)" class="btn btn-success" [disabled]="schemaForm.invalid">
+    Submit
+  </button>
+  <button (click)="cancelEdit()" class="btn btn-secondary">
+    Cancel
+  </button>
 </div>
