--- a/core/templates/pages/exploration-player-page/learner-experience/ratings-and-recommendations.component.html
+++ b/core/templates/pages/exploration-player-page/learner-experience/ratings-and-recommendations.component.html
@@ -63,12 +63,12 @@
         Already have an account?
         <span class="conversation-skin-login-button-text" translate="" (click)="signIn('.conversation-skin-login-button-text')">Sign In</span>
       </button>
-      <button class="conversation-skin-hide-sign-up-section-button e2e-test-dismiss-sign-up-section-button" *ngIf="isEndChapterFeatureEnabled()">
+      <button class="conversation-skin-hide-sign-up-section-button e2e-test-dismiss-sign-up-section-button">
         <span class="conversation-skin-hide-sign-up-section-text" translate="I18N_SIGNUP_SECTION_DONT_ASK_ME_AGAIN" (click)="hideSignUpSection()"></span>
       </button>
     </div>
   </div>
-  <div *ngIf="inStoryMode && isEndChapterFeatureEnabled() && storyId">
+  <div *ngIf="inStoryMode  && storyId">
     <oppia-post-chapter-recommendations [nextStoryNodeLink]="nextLessonLink"
                                         [nextStoryNodeThumbnailUrl]="nextStoryNodeIconUrl ? nextStoryNodeIconUrl : ''"
                                         [nextStoryNodeThumbnailBgColor]="nextStoryNode ? nextStoryNode.thumbnailBgColor : ''"
