--- a/core/templates/pages/exploration-player-page/learner-experience/tutor-card.component.html
+++ b/core/templates/pages/exploration-player-page/learner-experience/tutor-card.component.html
@@ -114,7 +114,7 @@
         </div>
       </div>
     </div>
-    <div *ngIf="platformFeatureService.status.EndChapterCelebration.isEnabled && isOnTerminalCard() && milestoneMessageIsToBeDisplayed && generateMilestoneMessage() && !setNextMilestoneAndCheckIfProgressBarIsShown()">
+    <div *ngIf="isOnTerminalCard() && milestoneMessageIsToBeDisplayed && generateMilestoneMessage() && !setNextMilestoneAndCheckIfProgressBarIsShown()">
       <div class="conversation-skin-milestone-message">
         <div class="milestone-message-star-container">
           <img [src]="getStaticImageUrl('/general/milestone-message-star-icon.svg')" class="star-icon">
@@ -123,7 +123,7 @@
         <span class="milestone-message-text">{{ generateMilestoneMessage() }}</span>
       </div>
     </div>
-    <div *ngIf="platformFeatureService.status.EndChapterCelebration.isEnabled && isOnTerminalCard() && setNextMilestoneAndCheckIfProgressBarIsShown()">
+    <div *ngIf="isOnTerminalCard() && setNextMilestoneAndCheckIfProgressBarIsShown()">
       <div class="conversation-skin-milestone-message milestone-progress-message">
         <div class="milestone-message-progress-bar-container">
           <div class="milestone-progress-bar-outer">
