--- a/core/templates/pages/exploration-player-page/layout-directives/progress-nav.component.html
+++ b/core/templates/pages/exploration-player-page/layout-directives/progress-nav.component.html
@@ -41,7 +41,7 @@
               *ngIf="shouldGenericSubmitButtonBeShown()"
               class="oppia-learner-confirm-button oppia-learner-submit-answer-button e2e-test-submit-answer-button"
               (click)="submit.emit()"
-              [disabled]="displayedCard.showNoResponseError()">
+              [disabled]="displayedCard.showNoResponseError() || displayedCard.showInvalidResponseError()">
         {{ 'I18N_INTERACTIONS_SUBMIT' | translate }}
       </button>
     </div>
