--- a/extensions/interactions/AlgebraicExpressionInput/directives/algebraic-expression-input-interaction.component.html
+++ b/extensions/interactions/AlgebraicExpressionInput/directives/algebraic-expression-input-interaction.component.html
@@ -1,5 +1,5 @@
 <div class="guppy-div-learner e2e-test-guppy-div" (click)="showOsk()"></div>
 
-<div *ngIf="!isCurrentAnswerValid()" class="alert alert-danger mt-2 oppia-algebraic-warning">
+<div *ngIf="!isCurrentAnswerValid()" class="oppia-form-error-container">
   {{warningText}}
 </div>
