--- a/extensions/interactions/MathEquationInput/directives/math-equation-input-interaction.component.html
+++ b/extensions/interactions/MathEquationInput/directives/math-equation-input-interaction.component.html
@@ -1,5 +1,5 @@
 <div class="guppy-div-learner e2e-test-guppy-div" (click)="showOSK()"></div>
 
-<div [hidden]="isCurrentAnswerValid()" class="alert alert-danger mt-2 oppia-algebraic-warning">
+<div [hidden]="isCurrentAnswerValid()" class="oppia-form-error-container">
   {{warningText}}
 </div>
